@@ -1,4 +1,4 @@
-AGENT API DOCUMENT		Started: 2008-07-03	Updated: 2018-03-23
+AGENT API DOCUMENT		Started: 2008-07-03	Updated: 2018-09-08
 
 This document describes the functions of an API(Application Programming Interface)
 for the VICIDIAL Agent screen. This functionality will be rather limited at first
@@ -35,6 +35,7 @@ pause_code - set a pause code if the agent is paused
 audio_playback - basic play/pause/resume/stop/restart audio in agent session
 switch_lead - for inbound calls, switches lead_id of live inbound call on agent screen
 calls_in_queue_count - display a count of the calls waiting in queue for the specific agent
+force_fronter_leave_3way - will send a command to fronter agent to leave-3way call that executing agent is on
 
 
 New scripts:
@@ -908,6 +909,36 @@ ERROR: no user found - 6666
 ERROR: agent_user is not logged in - 6666 
 SUCCESS: calls_in_queue_count - 0
 
+
+
+
+
+--------------------------------------------------------------------------------
+force_fronter_leave_3way - 
+
+DESCRIPTION:
+will send a command to fronter agent to leave-3way call that executing agent is on. Will not execute command for the named 'agent_user', but will look for oldest other user currently on a call with the same lead_id that the named agent_user is on the phone with.
+
+VALUES:
+ value - 
+  REQUIRED, choices are below:
+   LOCAL_ONLY - looks for fronter only on local cluster
+   LOCAL_AND_CCC - looks on local cluster and remote CCC to send command to (will always check local first)
+   CCC_REMOTE - use this when the closer is not on this cluster
+  lead_id - 
+    OPTIONAL, only to be used with CCC_REMOTE value commands
+
+EXAMPLE URLS:
+http://server/agc/api.php?source=test&user=6666&pass=1234&agent_user=1000&function=force_fronter_leave_3way&value=LOCAL_ONLY
+http://server/agc/api.php?source=test&user=6666&pass=1234&agent_user=1000&function=force_fronter_leave_3way&value=LOCAL_AND_CCC
+
+RESPONSES:
+ERROR: no user found - 6666
+ERROR: agent_user is not logged in - 6666
+ERROR: agent_user is not on a phone call - 6666
+ERROR: no fronter found - 6666
+SUCCESS: force_fronter_leave_3way SENT - 6667
+SUCCESS: force_fronter_leave_3way command sent over CCC - test_ccc
 
 
 
