@@ -1,4 +1,4 @@
-CROSS-CLUSTER COMMUNICATION	Started: 2011-05-27	Updated: 2017-08-09
+CROSS-CLUSTER COMMUNICATION	Started: 2011-05-27	Updated: 2018-09-08
 
 
 --------------------------------
@@ -25,7 +25,7 @@ Below is a description of a simple cross-cluster option, which is to send lead d
 		# 2- local list_id to insert lead into(if not populated, will use external system's list_id for the lead)
 
 - The AGI script will use parameters defined in a Settings Container for the URL of the originating system's Non-Agent API and credentials
-	The originating server will need to set up a user of level 8 with view reports and Agent API abilities, and the ccc_lead_info API function enabled
+	The originating server will need to set up a user of level 8 with view reports and Agent API abilities, and the 'ccc_lead_info' API function enabled
 	You will need to add a Settings Container to hold the URL for the originating system to look up the lead data, something like this:
 	http://server/vicidial/non_agent_api.php?user=6666&pass=1234&source=test&function=ccc_lead_info&call_id=--A--call_id--B--
 
@@ -42,6 +42,7 @@ NOTES:
 	# If lead is not found on external system, call will go to the 'B' option in the call menu
 	# If container is not found, call will go to the 'C' option in the call menu
 	# If call_id is not defined, call will go to the 'D' option in the call menu
+	# If you are planning to use the 'force_fronter_leave_3way' function across this CCC connection, make sure you have that API permission set for the API user above
 
 
 
