@@ -4107,6 +4107,7 @@ channel VARCHAR(100) default '',
 server_ip VARCHAR(60) NOT NULL,
 list_id BIGINT(14) UNSIGNED,
 container_id VARCHAR(40) default '',
+remote_lead_id INT(9) UNSIGNED,
 index (call_date),
 index (local_call_id),
 index (lead_id)
@@ -4343,6 +4344,9 @@ CREATE TABLE vicidial_did_log_archive LIKE vicidial_did_log;
 CREATE UNIQUE INDEX vdidla_key on vicidial_did_log_archive(uniqueid, call_date, server_ip);
 
 CREATE TABLE vicidial_recent_ascb_calls_archive LIKE vicidial_recent_ascb_calls;
+
+CREATE TABLE vicidial_ccc_log_archive LIKE vicidial_ccc_log;
+CREATE UNIQUE INDEX ccc_unq_key on vicidial_ccc_log_archive(uniqueid, call_date, lead_id);
 
 GRANT RELOAD ON *.* TO cron@'%';
 GRANT RELOAD ON *.* TO cron@localhost;
