@@ -186,6 +186,17 @@
         grades/ranks when copying an in-group.
   * Remove commas from mailboxname:
   	- Update: bin/ADMIN_keepalive_ALL.pl.
+  * Add upstream Rev. 3026:
+    - Update: UPGRADE,
+        agi/cm_sc_ccc_lookup_insert.agi,
+        bin/ADMIN_keepalive_ALL.pl,
+        docs/AGENT_API.txt,
+        docs/CROSS_CLUSTER_COMMUNICATION.txt,
+        extras/MySQL_AST_CREATE_tables.sql,
+        extras/mysql_update/mysql-1534.sql,
+        extras/upgrade_2.14.sql,
+        www/agc/api.php,
+        www/vicidial/admin.php: Added daily rolling of vicidial_ccc_log records.
 
 2.25.27
   [Jörg Fring-Fürst]
